# rules-js-pnpm-issue

./: MODULE.bazel  README
app1/: BUILD  package.json
app2/: BUILD  package.json  pnpm-lock.yaml
