bazel_dep(name = "aspect_rules_js", version = "1.28.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "app1_npm",
    pnpm_lock = "//app1:pnpm-lock.yaml",
)

use_repo(npm, "app1_npm")

# npm.npm_translate_lock(
#     name = "app2_npm",
#     pnpm_lock = "//app2:pnpm-lock.yaml",
# )

# use_repo(npm, "app2_npm")